<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <!-- Title -->

    <!-- Company -->

    <!-- Buy Date -->

    <!-- Image Search -->

    <!-- Buttons -->

    <Button
        android:id="@+id/serviceDueDateButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/serviceDueDate"
        android:layout_alignParentStart="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="18dp"
        android:text="@string/due_date" />

    <TextView
        android:id="@+id/serviceDueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/servicePrice"
        android:layout_alignParentLeft="false"
        android:layout_marginTop="19dp"
        android:text="@string/default_date" />

    <TextView
        android:id="@+id/companyLabel5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ServiceTitle"
        android:layout_marginTop="240dp"
        android:text="@string/price"
        android:textAppearance="?android:attr/textAppearanceLarge"></TextView>

    <TextView
        android:id="@+id/companyLabel4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ServiceTitle"
        android:layout_marginTop="54dp"
        android:text="@string/select_service"
        android:textAppearance="?android:attr/textAppearanceLarge"></TextView>

    <EditText
        android:id="@+id/serviceEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="215dp"
        android:ems="10"
        android:hint="@string/email_txt"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorLink="@color/koreku">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/serviceName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/service_txt"
        android:inputType="textShortMessage"
        android:minHeight="48dp"
        android:textColorLink="@color/koreku">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/servicePrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="305dp"
        android:ems="10"
        android:hint="@string/price_txt"
        android:inputType="number|numberDecimal"
        android:minHeight="48dp"
        android:textColorLink="@color/koreku">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/ServiceTitle"
        android:layout_width="237dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="158dp"
        android:text="@string/service_name"
        android:textAppearance="?android:attr/textAppearanceLarge"></TextView>

    <TextView
        android:id="@+id/companyLabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ServiceTitle"
        android:layout_marginTop="150dp"
        android:text="@string/mail_profile"
        android:textAppearance="?android:attr/textAppearanceLarge"></TextView>

    <Button
        android:id="@+id/serviceCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="25dp"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/serviceResetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/reset" />

    <Button
        android:id="@+id/serviceSubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/submit" />

    <Spinner
        android:id="@+id/serviceSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

</RelativeLayout>