<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.service.ServiceFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fragmentService_Button"
        android:layout_width="61dp"
        android:layout_height="55dp"
        android:layout_marginBottom="80dp"
        android:clickable="true"
        android:src="@android:drawable/ic_input_add"
        app:backgroundTint="@color/koreku"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.901"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_service_recycledView"
        android:layout_width="382dp"
        android:layout_height="588dp"
        android:backgroundTint="@color/koreku"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.633" />

</androidx.constraintlayout.widget.ConstraintLayout>