...
    <string name="title_profile">Profiles</string>
    <string name="title_services">Services</string>
    <string name="delete_games">Delete Games</string>
    <string name="list_by_gender">List By Genre</string>
    <string name="list_by_date">List By BuyDate</string>
    <string name="delete_consoles">Delete Consoles</string>
    <string name="delete_services">Delete Services</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="name_console">Console Name</string>
    <string name="buydate_console">Buy Date</string>
    <string name="company_console">Company</string>
    <string name="buydate_console_points">Buy Date: </string>
    <string name="company_console_points">Company: </string>
...
    <string name="updconsoles">Update Console</string>
    <string name="updgames">Update Game</string>
    <string name="updservices">Update Service</string>
    <string name="updprofile">Update Profile</string>
    <string name="name_profile_search">Enter the profile name to search it</string>
    <string name="notfound">Oops...Profile Not found</string>
    <string name="list_by_duedate">List by Due Date</string>
    <string name="priceapi">PriceCharting: Accesories and Games</string>
    <string name="search_box_hint">Search by console name</string>
    <string name="search">Search</string>
</resources>


